continued working